# SiemensTrains

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp  schedule.cpp  schedule.h  station.cpp  station.h  train.cpp  train.h
